testdata/invalid/internal/domain/user/alias.go
package user

import "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/user/app"

type Service = app.Service

var NewService = app.NewService
